--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+          <a class="js-scroll-trigger" href="#page-top">Amar Aprendiz</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">Home</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#about">About</a>
+          <a class="js-scroll-trigger" href="#about">Sobre nós</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Services</a>
+          <a class="js-scroll-trigger" href="#services">Serviços</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="js-scroll-trigger" href="#portfolio">Galeria</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
+          <a class="js-scroll-trigger" href="#contact">Contato</a>
         </li>
       </ul>
     </nav>
@@ -68,9 +68,9 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>non on on onono no no no no no no no no no n on o no </h2>
-            <p class="lead mb-5">nonono onnono ononono ononono onono onon </p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">no ono onono</a>
+            <h2>Sobre nós </h2>
+            <p class="lead mb-5"><nav></nav>onono onnono ononono ononono onono onon </p>
+            <!--<a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">no ono onono</a>-->
           </div>
         </div>
       </div>
