--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <p class="mb-0">no no no no </p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+              <img class="img-fluid" src="img/crianca 4.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -160,7 +160,7 @@
                   <p class="mb-0">nosadnosdanosanon on on o </p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+              <img class="img-fluid" src="img/crianca 2.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -171,7 +171,7 @@
                   <p class="mb-0">no non on on on onon</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+              <img class="img-fluid" src="img/crianca 3.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -182,7 +182,7 @@
                   <p class="mb-0">nononon on on o </p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+              <img class="img-fluid" src="img/crianca 4.jpg" alt="">
             </a>
           </div>
         </div>
