ajustes de layout e metadado

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Escola Amar Aprendiz, educação especial">
+    <meta name="keywords" content="especial, necessidades, escola, goiania, bueno, autista, down">
     <meta name="author" content="">
 
     <title>Escola Amar Aprendiz - Educação Especial</title>
@@ -34,7 +35,7 @@
           <a class="js-scroll-trigger" href="#page-top">Amar Aprendiz</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#page-top">Home</a>
+          <a class="js-scroll-trigger" href="#page-top">Início</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#about">Sobre nós</a>
@@ -54,7 +55,7 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <img size= height="30%" width="30%" src="img/disabilitie3.png">
+        <img size= height="230" width="230" src="img/disabilitie3.png">
         <h1 class="mb-1">AMAR APRENDIZ</h1>
         <h2 class="mb-5">
           Educação Especial
