--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Escola Amar Aprendiz, educação especial">
+    <meta name="description" content="Escola Aprendiz Amar, educação especial">
     <meta name="keywords" content="especial, necessidades, escola, goiania, bueno, autista, down">
     <meta name="author" content="">
 
-    <title>Escola Amar Aprendiz - Educação Especial</title>
+    <title>Escola Aprendiz Amar - Educação Especial</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Amar Aprendiz</a>
+          <a class="js-scroll-trigger" href="#page-top">Aprendiz Amar</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">Início</a>
@@ -55,8 +55,8 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <img size= height="230" width="230" src="img/disabilitie3.png">
-        <h1 class="mb-1">AMAR APRENDIZ</h1>
+        <img size= height="260" width="260" src="img/disabilitie3.png">
+        <h1 class="mb-1">APRENDIZ AMAR</h1>
         <h2 class="mb-5">
           Educação Especial
         </h2>
@@ -231,7 +231,7 @@
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Escola Amar Aprendiz 2018</p>
+        <p class="text-muted small mb-0">Copyright &copy; Escola Aprendiz Amar 2018</p>
       </div>
     </footer>
 
