--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
     </section> -->
 
     <!-- Map -->
-    <section>
+    <section class="map">
     	<div class="map">
-    		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.4473625889173!2d-49.271917585133096!3d-16.704515788491193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef124aca8b16d%3A0x7e9c98e002708a59!2sEscola+Aprendiz+Amar!5e0!3m2!1spt-BR!2sbr!4v1532607330695" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    		<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.4473625889173!2d-49.271917585133096!3d-16.704515788491193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef124aca8b16d%3A0x7e9c98e002708a59!2sEscola+Aprendiz+Amar!5e0!3m2!1spt-BR!2sbr!4v1532607330695"></iframe>
     	</div>
     </section>
 
