--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Escola Aprendiz Amar, educação especial">
+    <meta name="description" content="Escola Amar Aprendiz, educação especial">
     <meta name="keywords" content="especial, necessidades, escola, goiania, bueno, autista, down">
     <meta name="author" content="">
 
-    <title>Escola Aprendiz Amar - Educação Especial</title>
+    <title>Escola Amar Aprendiz - Educação Especial</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,16 +32,16 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Aprendiz Amar</a>
+          <a class="js-scroll-trigger" href="#page-top">Amar Aprendiz</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">Início</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#about">Sobre nós</a>
+          <a class="js-scroll-trigger" href="#services">O que oferecemos</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Serviços</a>
+          <a class="js-scroll-trigger" href="#about">Sobre nós</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">Galeria</a>
@@ -56,7 +56,7 @@
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
         <img size= height="260" width="260" src="img/disabilitie3.png">
-        <h1 class="mb-1">APRENDIZ AMAR</h1>
+        <h1 class="mb-1">AMAR APRENDIZ</h1>
         <h2 class="mb-5">
           Educação Especial
         </h2>
@@ -67,127 +67,160 @@
     </header>
 
     <!-- About -->
-    <section class="content-section bg-light" id="about">
+
+    <!--<section class="content-section bg-light" id="about">
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Sobre nós </h2>
-            <p class="lead mb-5"><nav></nav>onono onnono ononono ononono onono onon </p>
-            <!--<a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">no ono onono</a>-->
+            <p class="lead mb-5"><nav></nav>Somos uma instituição de ensino especial com 20 anos de história que busca promover o desenvolvimento global do aluno, respeitando a capacidade individual e valorizando a importância da união uns com os outros. Buscamos estimular a valorização pessoal e do outro ampliando as possibilidades de comunicação e expressão. </p>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">no ono onono</a>
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Serviços</h3>
-          <h2 class="mb-5">O que oferecemos</h2>
+
+           <h2 class="text-secondary mb-0">O que oferecemos</h2></br>
+
+          <!--<h2 class="mb-5">O que oferecemos</h2>-->
+
+          <p class="text-faded mb-0">Atividades que estimulam participação em situações de intercâmbio social nas quais possam contar com suas vivências, ouvir as de outras pessoas , elaborar e responder perguntas. Desenvolvimento da expressão corporal, habilidades manuais, coordenação motora e o interesse e a atenção para que ocorra assimilação e aprendizagem.</p>
+          </br>
+
         </div>
         <div class="row">
+
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
+              <i class="icon-speech"></i>
             </span>
             <h4>
-              <strong>nonono</strong>
+              <strong>Fonoaudiologia</strong>
             </h4>
-            <p class="text-faded mb-0">no no n on on o</p>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-pencil"></i>
-            </span>
-            <h4>
-              <strong>nononon </strong>
-            </h4>
-            <p class="text-faded mb-0">nononono no no no no </p>
+            <!--<p class="text-faded mb-0">nononono no no no no </p>-->
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="icon-like"></i>
             </span>
             <h4>
-              <strong>no no no n</strong>
+              <strong>Psicologia</strong>
             </h4>
-            <p class="text-faded mb-0">nonon non on o
-              <i class="fa fa-heart"></i>
-              Sno no no n!</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
+              <i class="icon-heart"></i>
             </span>
             <h4>
-              <strong>perguntas</strong>
+               <strong>Terapia Ocupacional</strong>
             </h4>
-            <p class="text-faded mb-0">no n ono no n</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-music-tone-alt"></i>
+            </span>
+            <h4>
+              <strong>Musicoterapia</strong>
+            </h4>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Callout -->
-    <section class="callout">
+    <section class="callout" id="about">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h2>Sobre nós </h2>
+            <p class="lead mb-5"><nav></nav>Somos uma instituição de ensino especial com 20 anos de história que busca promover o desenvolvimento global do aluno, respeitando a capacidade individual e valorizando a importância da união uns com os outros. Buscamos estimular a valorização pessoal e do outro ampliando as possibilidades de comunicação e expressão. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--<section class="callout">
       <div class="container text-center">
         <h2 class="mx-auto mb-5">non ono no no no no 
       </div>
-    </section>
+    </section>-->
 
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
         <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">on on on o</h3>
+          <h3 class="text-secondary mb-0">Nossas lembranças</h3>
           <h2 class="mb-5">Galeria</h2>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+             <!-- <span class="caption">
                 <span class="caption-content">
-                  <h2>Evento1</h2>
-                  <p class="mb-0">no no no no </p>
+                  <h2>A escola</h2>
+                  <p class="mb-0">nossa estrutura</p>
                 </span>
-              </span>
-              <img class="img-fluid" src="img/crianca 4.jpg" alt="">
+              </span>-->
+              <img class="img-fluid" src="img/escola1.jpeg" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Evento 2</h2>
-                  <p class="mb-0">nosadnosdanosanon on on o </p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/crianca 2.jpg" alt="">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto1.jpeg" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>no no no </h2>
-                  <p class="mb-0">no non on on on onon</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/crianca 3.jpg" alt="">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/escola4.jpeg" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>nonono</h2>
-                  <p class="mb-0">nononon on on o </p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/crianca 4.jpg" alt="">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto2.jpeg" alt="">
             </a>
           </div>
+        </div>
+        <!--Linha2-->
+        <div class="row no-gutters">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto4.jpeg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto6.jpeg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/escola3.jpeg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/escola2.jpeg" alt="">
+            </a>
+          </div>
+        </div>
+        <!--Linha3-->
+        <div class="row no-gutters">
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto5.jpeg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a class="portfolio-item">
+              <img class="img-fluid" src="img/foto3.jpeg" alt="">
+            </a>
+          </div>
+        
         </div>
       </div>
     </section>
@@ -216,7 +249,7 @@
     <!-- Footer -->
     <footer class="footer text-center">
       <div class="container">
-        <ul class="list-inline mb-5">
+        <!--<ul class="list-inline mb-5">
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="#">
               <i class="icon-social-facebook"></i>
@@ -232,8 +265,8 @@
               <i class="icon-social-github"></i>
             </a>
           </li>
-        </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Escola Aprendiz Amar 2018</p>
+        </ul>-->
+        <p class="text-muted small mb-0">Copyright &copy; Escola Amar Aprendiz 2018</p>
       </div>
     </footer>
 
