--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <img size= height="260" width="260" src="img/disabilitie3.png">
+        <img size= height="270" width="270" src="img/disabilitie3.png">
         <h1 class="mb-1">AMAR APRENDIZ</h1>
         <h2 class="mb-5">
           Educação Especial
@@ -247,8 +247,20 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="footer">
       <div class="container">
+      	       <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-lg-offset-1 text-center">
+                    <h4><strong>Escola Amar Aprendiz</strong>
+                    </h4>
+                    <p>Goiânia, GO</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (62) 9999-9999</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">contato@mail.com</a>
+                        </li>
+                    </ul>
+                    <br>
         <!--<ul class="list-inline mb-5">
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="#">
