adicionando atualizações de info e layout

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                     </h4>
                     <p>Goiânia, GO</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (62) 9999-9999</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">contato@mail.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (62) 3259-4438</li>
+                        <!--<li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">contato@mail.com</a>-->
                         </li>
                     </ul>
                     <br>
